--- a/test-output/index.html
+++ b/test-output/index.html
@@ -152,8 +152,8 @@
                   <a name="checkUsersTitle">
                   </a> <!-- checkUsersTitle -->
                   <span class="method-name">checkUsersTitle</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [] but found [JavaByKiran | User]
-	at com.jbk.Testcase2.checkUsersTitle(Testcase2.java:30)
+                  <div class="stack-trace">java.lang.AssertionError: expected [] but found [Facebook helps you connect and share with the people in your life.]
+	at com.jbk.Testcase2.checkUsersTitle(Testcase2.java:32)
 ... Removed 31 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -171,8 +171,8 @@
                   <a name="checklogIn">
                   </a> <!-- checklogIn -->
                   <span class="method-name">checklogIn</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [error] but found [Please enter email as kiran@gmail.com]
-	at com.jbk.Testcase1.checklogIn(Testcase1.java:32)
+                  <div class="stack-trace">java.lang.AssertionError: expected [error] but found [Create an account]
+	at com.jbk.Testcase1.checklogIn(Testcase1.java:29)
 ... Removed 31 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -264,26 +264,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkUsersTitle')
+data.setCell(0, 1, 'checkTitle')
 data.setCell(0, 2, 'com.jbk.Testcase2')
-data.setCell(0, 3, 1048);
+data.setCell(0, 3, 4943);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'checklogIn')
 data.setCell(1, 2, 'com.jbk.Testcase1')
-data.setCell(1, 3, 564);
+data.setCell(1, 3, 832);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'checktitle')
-data.setCell(2, 2, 'com.jbk.Testcase1')
-data.setCell(2, 3, 12);
+data.setCell(2, 1, 'checkUsersTitle')
+data.setCell(2, 2, 'com.jbk.Testcase2')
+data.setCell(2, 3, 66);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'checkTitle')
-data.setCell(3, 2, 'com.jbk.Testcase2')
-data.setCell(3, 3, 11);
+data.setCell(3, 1, 'checktitle')
+data.setCell(3, 2, 'com.jbk.Testcase1')
+data.setCell(3, 3, 17);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -319,7 +319,7 @@ return data;
               <div class="chronological-class-name">com.jbk.Testcase2</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">setup</span>
-                <span class="method-start">16643 ms</span>
+                <span class="method-start">21736 ms</span>
               </div> <!-- configuration-suite before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -328,38 +328,38 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">checklogIn</span>
-                <span class="method-start">94671 ms</span>
+                <span class="method-start">43254 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checktitle</span>
-                <span class="method-start">95279 ms</span>
+                <span class="method-start">44151 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.jbk.Testcase2</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">checkTitle</span>
-                <span class="method-start">95295 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">checkUsersTitle</span>
-                <span class="method-start">95310 ms</span>
+                <span class="method-start">44173 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkTitle</span>
+                <span class="method-start">44243 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.jbk.Testcase1</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">close</span>
-                <span class="method-start">96675 ms</span>
+                <span class="method-start">50172 ms</span>
               </div> <!-- configuration-suite after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.jbk.Testcase2</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">close</span>
-                <span class="method-start">97082 ms</span>
+                <span class="method-start">50555 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
