--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">2</td><td class="num">1,804</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">2</td><td class="num">6,368</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.jbk.Testcase1</td><td><a href="#m0">checklogIn</a></td><td rowspan="1">1583225385551</td><td rowspan="1">564</td></tr><tr class="failedodd"><td rowspan="1">com.jbk.Testcase2</td><td><a href="#m1">checkUsersTitle</a></td><td rowspan="1">1583225386190</td><td rowspan="1">1048</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.jbk.Testcase1</td><td><a href="#m2">checktitle</a></td><td rowspan="1">1583225386159</td><td rowspan="1">12</td></tr><tr class="passedodd"><td rowspan="1">com.jbk.Testcase2</td><td><a href="#m3">checkTitle</a></td><td rowspan="1">1583225386175</td><td rowspan="1">11</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.jbk.Testcase1</td><td><a href="#m0">checklogIn</a></td><td rowspan="1">1583231947490</td><td rowspan="1">832</td></tr><tr class="failedodd"><td rowspan="1">com.jbk.Testcase2</td><td><a href="#m1">checkUsersTitle</a></td><td rowspan="1">1583231948409</td><td rowspan="1">66</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.jbk.Testcase1</td><td><a href="#m2">checktitle</a></td><td rowspan="1">1583231948387</td><td rowspan="1">17</td></tr><tr class="passedodd"><td rowspan="1">com.jbk.Testcase2</td><td><a href="#m3">checkTitle</a></td><td rowspan="1">1583231948479</td><td rowspan="1">4943</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.jbk.Testcase1#checklogIn</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [error] but found [Please enter email as kiran@gmail.com]
-	at com.jbk.Testcase1.checklogIn(Testcase1.java:32)
+<h2>Test</h2><h3 id="m0">com.jbk.Testcase1#checklogIn</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [error] but found [Create an account]
+	at com.jbk.Testcase1.checklogIn(Testcase1.java:29)
 ... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.jbk.Testcase2#checkUsersTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [] but found [JavaByKiran | User]
-	at com.jbk.Testcase2.checkUsersTitle(Testcase2.java:30)
+<h3 id="m1">com.jbk.Testcase2#checkUsersTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [] but found [Facebook helps you connect and share with the people in your life.]
+	at com.jbk.Testcase2.checkUsersTitle(Testcase2.java:32)
 ... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.jbk.Testcase1#checktitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">com.jbk.Testcase2#checkTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
